<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/settingsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15sp"
            android:text="Settings"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/urgentLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="30sp"
            android:paddingTop="20sp"
            android:text="Update Urgent Keywords"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/urgentKeywords"
            android:layout_width="320sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="10sp" />

        <TextView
            android:id="@+id/savedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="30sp"
            android:paddingTop="20sp"
            android:text="Update Saved Keywords"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/savedKeywords"
            android:layout_width="320sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="10sp" />

        <TextView
            android:id="@+id/spamLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="30sp"
            android:paddingTop="20sp"
            android:text="Update Spam Keywords"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/spamKeywords"
            android:layout_width="320sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="10sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp">

            <Button
                android:id="@+id/saveSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save Subject" />

            <Button
                android:id="@+id/saveSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save Sender" />

            <Button
                android:id="@+id/saveBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save Body" />


        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>