<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="472dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:text="Notifications"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchNotifications"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:hint="Search emails" />

        <Button
            android:id="@+id/savedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Saved" />

        <Button
            android:id="@+id/urgentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Urgent" />

        <Button
            android:id="@+id/spamButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Spam" />

        <Button
            android:id="@+id/newsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Newsletters" />

        <Spinner
            android:id="@+id/numberEmails"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="387dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
