<resources>
    <string name="app_name">MySmartUSC</string>
    <string name="homeLabel">MySmartUSC Home</string>
    <string name="notificationsButton">Notifications</string>
    <string name="settingsButton">Settings</string>
    <string name="emailSubject">Email Subject</string>
    <string name="emailFrom">From</string>
    <string name="emailBody">Email Body</string>
    <string name="backButton">Back</string>
    <string name="loading">Loading...</string>
    <string name="sign_out">Sign Out</string>
    <string name="channel_name">MySmartUSC</string>
    <string name="channel_description">Urgent updates</string>
    <string name="homepage">Homepage</string>
    <string name="account">Account</string>
</resources>
